# nta

./: .gitignore  DOCUMENTATION.md  PLAN.md  QUICKSTART.md  README.md  REPORT.md  main.py  pyproject.toml
scripts/: generate_demo_pcap.py
src/analyzer/: __init__.py  __main__.py  alerts.py  baseline.py  capture.py  cli.py  config.py  features.py  interfaces.py  logging_config.py  models.py  parser.py  reporting.py  storage.py  ui.py  windows.py
src/analyzer/detectors/: __init__.py  base.py  port_scan.py  protocol_shift.py  syn_flood.py  traffic_anomaly.py
tests/: __init__.py  conftest.py  test_baseline.py  test_detectors.py  test_parser.py  test_reporting.py  test_windows.py
