[project]
name = "network-traffic-analyzer"
version = "0.1.0"
description = "Real-time network traffic monitoring and anomaly detection system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Network Traffic Analyzer Team"}
]
keywords = ["network", "security", "monitoring", "anomaly-detection", "packet-capture", "scapy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    "scapy>=2.5.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "textual>=0.40.0",
    "prompt_toolkit>=3.0",
    "docker>=7.0",
    "pygments>=2.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
nta = "analyzer.cli:main"
network-traffic-analyzer = "analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/network-traffic-analyzer/nta"
Documentation = "https://github.com/network-traffic-analyzer/nta#readme"
Repository = "https://github.com/network-traffic-analyzer/nta"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
